version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/DataModel/Enums/EXDSaveRestartsOnType.rst.txt
.. vale off



:class:`EXDSaveRestartsOnType`
==============================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.DataModel.Enums.EXDSaveRestartsOnType

   Bases: :py:obj:`enum.Enum`


   
   Generic enumeration.

   Derive from this class to define new enumerations.















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: EXDSaveRestartsOnType

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~EquallySpaced`
            - 
          * - :py:attr:`~Time`
            - 
          * - :py:attr:`~TimeSteps`
            - 








Attribute detail
----------------
.. py:attribute:: EquallySpaced
   :value: 2


.. py:attribute:: Time
   :value: 1


.. py:attribute:: TimeSteps
   :value: 0






.. vale on